--- a/Passtimes/Passtimes/Feed.storyboard
+++ b/Passtimes/Passtimes/Feed.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Feed View Controller-->
         <scene sceneID="vg6-9s-tqK">
             <objects>
-                <viewController id="9Ws-5t-fJj" sceneMemberID="viewController">
+                <viewController id="9Ws-5t-fJj" customClass="FeedViewController" customModule="Passtimes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZNw-zI-2Ol">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,16 +23,43 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JXT-PB-QSq">
+                                <rect key="frame" x="16" y="132" width="343" height="519"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KWs-IV-5dJ">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellIdentifier" id="AK1-Gm-j3P">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="9TM-US-UEG" firstAttribute="trailing" secondItem="1wd-dI-Tbr" secondAttribute="trailing" constant="16" id="3HV-JP-2Y1"/>
+                            <constraint firstItem="JXT-PB-QSq" firstAttribute="top" secondItem="1wd-dI-Tbr" secondAttribute="bottom" constant="16" id="EEV-1G-trT"/>
+                            <constraint firstItem="JXT-PB-QSq" firstAttribute="leading" secondItem="9TM-US-UEG" secondAttribute="leading" constant="16" id="QeF-5e-46e"/>
+                            <constraint firstItem="9TM-US-UEG" firstAttribute="bottom" secondItem="JXT-PB-QSq" secondAttribute="bottom" constant="16" id="h3k-6l-KSj"/>
                             <constraint firstItem="1wd-dI-Tbr" firstAttribute="top" secondItem="9TM-US-UEG" secondAttribute="top" constant="16" id="mby-7E-szI"/>
+                            <constraint firstItem="9TM-US-UEG" firstAttribute="trailing" secondItem="JXT-PB-QSq" secondAttribute="trailing" constant="16" id="qYo-XG-YQ0"/>
                             <constraint firstItem="1wd-dI-Tbr" firstAttribute="leading" secondItem="9TM-US-UEG" secondAttribute="leading" constant="16" id="uV6-oT-dMw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9TM-US-UEG"/>
                     </view>
                     <navigationItem key="navigationItem" id="CX5-6q-kcd"/>
+                    <connections>
+                        <outlet property="onGoingCollection" destination="JXT-PB-QSq" id="co6-5z-6Yu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p4j-bq-lnB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
