--- a/Passtimes/Passtimes/onGoingCollectionCell.xib
+++ b/Passtimes/Passtimes/onGoingCollectionCell.xib
@@ -12,23 +12,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="OnGoingCollectionViewCell" customModule="Passtimes" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqU-IS-0FR" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ixe-Xu-JZP">
-                            <rect key="frame" x="330" y="0.0" width="45" height="45"/>
+                            <rect key="frame" x="330" y="0.0" width="45" height="55"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oct" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wn3-zh-rZc" userLabel="Month">
-                                    <rect key="frame" x="11.5" y="6.5" width="22.5" height="14.5"/>
+                                    <rect key="frame" x="11.5" y="9.5" width="22.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4R-FV-eVl" userLabel="Day">
-                                    <rect key="frame" x="13" y="21" width="19" height="22"/>
+                                    <rect key="frame" x="13" y="24" width="19" height="22"/>
                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="e4R-FV-eVl" secondAttribute="trailing" id="4Py-9T-MHt"/>
                                 <constraint firstItem="Wn3-zh-rZc" firstAttribute="centerX" secondItem="Ixe-Xu-JZP" secondAttribute="centerX" id="FK6-0B-Gjt"/>
-                                <constraint firstAttribute="height" constant="45" id="SsD-8X-C7T"/>
+                                <constraint firstAttribute="height" constant="55" id="SsD-8X-C7T"/>
                                 <constraint firstItem="e4R-FV-eVl" firstAttribute="centerX" secondItem="Wn3-zh-rZc" secondAttribute="centerX" id="USO-LC-CJ6"/>
                                 <constraint firstItem="Wn3-zh-rZc" firstAttribute="centerY" secondItem="Ixe-Xu-JZP" secondAttribute="centerY" multiplier="0.6" id="Xck-29-dUf"/>
                                 <constraint firstItem="Wn3-zh-rZc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ixe-Xu-JZP" secondAttribute="leading" id="YB0-8E-qAp"/>
@@ -49,25 +49,25 @@
                                 <constraint firstItem="e4R-FV-eVl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ixe-Xu-JZP" secondAttribute="leading" id="vZu-FK-hDf"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc0-No-uO7" userLabel="Sport">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Soccer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc0-No-uO7" userLabel="Sport">
                             <rect key="frame" x="16" y="16" width="42.5" height="15"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer practice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62b-5h-x1a" userLabel="Title">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Soccer practice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62b-5h-x1a" userLabel="Title">
                             <rect key="frame" x="16" y="31" width="205.5" height="33.5"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XL Soccer World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfw-ak-IpV" userLabel="Location">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="XL Soccer World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfw-ak-IpV" userLabel="Location">
                             <rect key="frame" x="16" y="69.5" width="121.5" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friday 5:00 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfS-9K-S2v" userLabel="Date">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Friday 5:00 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfS-9K-S2v" userLabel="Date">
                             <rect key="frame" x="16" y="89" width="116" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
