--- a/Passtimes/Passtimes/Feed.storyboard
+++ b/Passtimes/Passtimes/Feed.storyboard
@@ -14,17 +14,17 @@
             <objects>
                 <viewController id="9Ws-5t-fJj" customClass="FeedViewController" customModule="Passtimes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZNw-zI-2Ol">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="On Going" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wd-dI-Tbr">
-                                <rect key="frame" x="16" y="80" width="343" height="36"/>
+                                <rect key="frame" x="16" y="16" width="343" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JXT-PB-QSq">
-                                <rect key="frame" x="16" y="132" width="343" height="519"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JXT-PB-QSq">
+                                <rect key="frame" x="16" y="68" width="343" height="519"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KWs-IV-5dJ">
                                     <size key="itemSize" width="341" height="92"/>
@@ -57,10 +57,18 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9TM-US-UEG"/>
                     </view>
-                    <navigationItem key="navigationItem" id="CX5-6q-kcd"/>
+                    <navigationItem key="navigationItem" id="CX5-6q-kcd">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="oyg-8z-ak5">
+                            <color key="tintColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="createEvent:" destination="9Ws-5t-fJj" id="9tq-yP-ZDS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="onGoingCollection" destination="JXT-PB-QSq" id="co6-5z-6Yu"/>
                         <segue destination="UQP-7s-t3f" kind="showDetail" identifier="toDetailView" id="nho-gX-bIh"/>
+                        <segue destination="vhj-kR-A3V" kind="showDetail" identifier="toCreateView" id="XlQ-34-SHc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p4j-bq-lnB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -73,7 +81,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YQ5-oB-4n4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="q6E-5Q-lIx"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XRu-VN-Ijw">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="XRu-VN-Ijw">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -85,6 +93,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gpD-MR-QNy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="69.599999999999994" y="-241.52923538230885"/>
+        </scene>
+        <!--CreateEvent-->
+        <scene sceneID="acN-hc-8Yx">
+            <objects>
+                <viewControllerPlaceholder storyboardName="CreateEvent" id="vhj-kR-A3V" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kFz-2F-rH8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1868" y="-308"/>
         </scene>
         <!--DetailEvent-->
         <scene sceneID="kyD-kv-gt0">
