--- a/Passtimes/Passtimes/PickSport.xib
+++ b/Passtimes/Passtimes/PickSport.xib
@@ -25,10 +25,10 @@
                                 <constraint firstAttribute="width" constant="45" id="eTn-0j-JaQ"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jo0-wf-Bzi">
-                            <rect key="frame" x="32.5" y="79.5" width="45.5" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <nil key="textColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jo0-wf-Bzi">
+                            <rect key="frame" x="31" y="79.5" width="48.5" height="17"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                            <color key="textColor" red="0.76862745099999996" green="0.76862745099999996" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -53,6 +53,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="card" destination="GTl-gC-C88" id="byY-sg-Rca"/>
                 <outlet property="category" destination="Jo0-wf-Bzi" id="AcD-q7-GH5"/>
                 <outlet property="sportIcon" destination="1rL-eE-39h" id="Av1-cg-bk6"/>
             </connections>
