--- a/Passtimes/Passtimes/PickSport.xib
+++ b/Passtimes/Passtimes/PickSport.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GTl-gC-C88">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GTl-gC-C88">
                     <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1rL-eE-39h" userLabel="Icon">
