--- a/Passtimes/Passtimes/onGoingCollectionCell.xib
+++ b/Passtimes/Passtimes/onGoingCollectionCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqU-IS-0FR" userLabel="Content View">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqU-IS-0FR" userLabel="Card">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ixe-Xu-JZP">
@@ -24,13 +24,13 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oct" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wn3-zh-rZc" userLabel="Month">
                                     <rect key="frame" x="11.5" y="9.5" width="22.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4R-FV-eVl" userLabel="Day">
                                     <rect key="frame" x="13" y="24" width="19" height="22"/>
                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -49,34 +49,33 @@
                                 <constraint firstItem="e4R-FV-eVl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ixe-Xu-JZP" secondAttribute="leading" id="vZu-FK-hDf"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Soccer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc0-No-uO7" userLabel="Sport">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc0-No-uO7" userLabel="Sport">
                             <rect key="frame" x="16" y="16" width="42.5" height="15"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Soccer practice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62b-5h-x1a" userLabel="Title">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soccer practice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62b-5h-x1a" userLabel="Title">
                             <rect key="frame" x="16" y="31" width="205.5" height="33.5"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="XL Soccer World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfw-ak-IpV" userLabel="Location">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XL Soccer World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfw-ak-IpV" userLabel="Location">
                             <rect key="frame" x="16" y="69.5" width="121.5" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Friday 5:00 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfS-9K-S2v" userLabel="Date">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friday 5:00 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfS-9K-S2v" userLabel="Date">
                             <rect key="frame" x="16" y="89" width="116" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="TfS-9K-S2v" secondAttribute="bottom" priority="251" constant="10" id="046-Tg-M9s"/>
                         <constraint firstItem="Ixe-Xu-JZP" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="62b-5h-x1a" secondAttribute="trailing" id="6K0-3z-Aye"/>
                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TfS-9K-S2v" secondAttribute="trailing" id="6T7-u8-HMB"/>
                         <constraint firstItem="zfw-ak-IpV" firstAttribute="top" secondItem="62b-5h-x1a" secondAttribute="bottom" constant="5" id="7JC-XI-Gqe"/>
@@ -90,7 +89,7 @@
                         <constraint firstAttribute="trailing" secondItem="Ixe-Xu-JZP" secondAttribute="trailing" id="bhb-wd-qaf"/>
                         <constraint firstItem="TfS-9K-S2v" firstAttribute="top" secondItem="zfw-ak-IpV" secondAttribute="bottom" id="noI-nq-Pn6"/>
                         <constraint firstItem="Gc0-No-uO7" firstAttribute="leading" secondItem="gqU-IS-0FR" secondAttribute="leading" constant="16" id="nqO-Ir-8hs"/>
-                        <constraint firstItem="Gc0-No-uO7" firstAttribute="top" secondItem="gqU-IS-0FR" secondAttribute="top" priority="251" constant="16" id="u44-yl-CQL"/>
+                        <constraint firstItem="Gc0-No-uO7" firstAttribute="top" secondItem="gqU-IS-0FR" secondAttribute="top" constant="16" id="u44-yl-CQL"/>
                     </constraints>
                 </view>
             </subviews>
@@ -105,6 +104,7 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="attendingIndicator" destination="Ixe-Xu-JZP" id="Umq-Ul-gMS"/>
+                <outlet property="card" destination="gqU-IS-0FR" id="elk-yf-AcS"/>
                 <outlet property="day" destination="e4R-FV-eVl" id="roJ-cu-NW8"/>
                 <outlet property="location" destination="zfw-ak-IpV" id="hc4-ta-d8h"/>
                 <outlet property="month" destination="Wn3-zh-rZc" id="jEh-Sh-iiY"/>
