--- a/Passtimes/Passtimes/OnBoarding.storyboard
+++ b/Passtimes/Passtimes/OnBoarding.storyboard
@@ -12,7 +12,7 @@
         <!--On Boarding View Controller-->
         <scene sceneID="jgj-Wd-aSk">
             <objects>
-                <viewController id="vLK-Cn-xjd" customClass="OnBoardingViewController" customModule="Passtimes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OnBoardingViewController" id="vLK-Cn-xjd" customClass="OnBoardingViewController" customModule="Passtimes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3kz-9w-wrv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,58 +27,72 @@
                                 <state key="normal" title="Login">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="moveToNextViewController:" destination="vLK-Cn-xjd" eventType="touchUpInside" id="RF7-UA-b4W"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="69q-WA-7Su">
-                                <rect key="frame" x="94" y="635" width="187" height="12"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="Don't have an account? ">
-                                        <attributes>
-                                            <color key="NSColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="13" name="SFProText-Regular"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                    <fragment content="Sign up">
-                                        <attributes>
-                                            <color key="NSColor" red="0.12549019610000001" green="0.77647058820000003" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="13" name="SFProText-Bold"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <containerView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XhY-AR-7NJ">
                                 <rect key="frame" x="0.0" y="20" width="375" height="440"/>
                                 <connections>
                                     <segue destination="vf2-pb-ICC" kind="embed" id="EXQ-fe-9YZ"/>
                                 </connections>
                             </containerView>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wEN-S7-Q0p">
+                                <rect key="frame" x="16" y="620" width="343" height="27"/>
+                                <state key="normal">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Don't have an account? ">
+                                            <attributes>
+                                                <color key="NSColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <font key="NSFont" size="13" name="SFProText-Regular"/>
+                                                <font key="NSOriginalFont" size="13" name="SFProText-Regular"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                        <fragment content="Sign Up">
+                                            <attributes>
+                                                <color key="NSColor" red="0.37627673149108887" green="0.79724997282028198" blue="0.73731857538223267" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <font key="NSFont" size="13" name="SFProText-Bold"/>
+                                                <font key="NSOriginalFont" size="13" name="SFProText-Regular"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Wpm-bO-USG" firstAttribute="leading" secondItem="6hU-sM-Ijc" secondAttribute="leading" constant="16" id="2Ex-Mv-5Jy"/>
+                            <constraint firstItem="6hU-sM-Ijc" firstAttribute="trailing" secondItem="wEN-S7-Q0p" secondAttribute="trailing" constant="16" id="3sS-Al-tR5"/>
                             <constraint firstItem="Wpm-bO-USG" firstAttribute="top" secondItem="XhY-AR-7NJ" secondAttribute="bottom" constant="80" id="AfC-hT-NDx"/>
                             <constraint firstItem="6hU-sM-Ijc" firstAttribute="trailing" secondItem="XhY-AR-7NJ" secondAttribute="trailing" id="B3a-8F-KWW"/>
+                            <constraint firstItem="wEN-S7-Q0p" firstAttribute="leading" secondItem="6hU-sM-Ijc" secondAttribute="leading" constant="16" id="Bjc-35-Szu"/>
                             <constraint firstItem="XhY-AR-7NJ" firstAttribute="height" secondItem="3kz-9w-wrv" secondAttribute="height" multiplier="0.66" id="Deo-Pj-g2b"/>
                             <constraint firstItem="XhY-AR-7NJ" firstAttribute="top" secondItem="6hU-sM-Ijc" secondAttribute="top" id="OCD-2n-IAp"/>
-                            <constraint firstItem="69q-WA-7Su" firstAttribute="centerX" secondItem="6hU-sM-Ijc" secondAttribute="centerX" id="WWO-fK-0lM"/>
                             <constraint firstItem="XhY-AR-7NJ" firstAttribute="leading" secondItem="6hU-sM-Ijc" secondAttribute="leading" id="Zsq-yZ-LPC"/>
-                            <constraint firstItem="6hU-sM-Ijc" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="69q-WA-7Su" secondAttribute="trailing" constant="16" id="cu3-zL-R4r"/>
+                            <constraint firstItem="6hU-sM-Ijc" firstAttribute="bottom" secondItem="wEN-S7-Q0p" secondAttribute="bottom" constant="20" id="h0U-8f-j4R"/>
                             <constraint firstItem="6hU-sM-Ijc" firstAttribute="trailing" secondItem="Wpm-bO-USG" secondAttribute="trailing" constant="16" id="j57-eo-Gf9"/>
-                            <constraint firstItem="6hU-sM-Ijc" firstAttribute="bottom" secondItem="69q-WA-7Su" secondAttribute="bottom" constant="20" id="ked-dd-5TC"/>
-                            <constraint firstItem="69q-WA-7Su" firstAttribute="top" secondItem="Wpm-bO-USG" secondAttribute="bottom" constant="45" id="rlG-NN-5U1"/>
-                            <constraint firstItem="69q-WA-7Su" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6hU-sM-Ijc" secondAttribute="leading" constant="16" id="skw-vc-gss"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6hU-sM-Ijc"/>
                     </view>
                     <connections>
+                        <outlet property="loginButton" destination="Wpm-bO-USG" id="bM2-Go-r4A"/>
                         <outlet property="pageContainer" destination="XhY-AR-7NJ" id="rEi-yu-SlW"/>
+                        <segue destination="XtF-2x-JgY" kind="showDetail" identifier="toLogin" id="T9c-fk-qOq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2YP-0R-qAO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-175.19999999999999" y="212.74362818590706"/>
+        </scene>
+        <!--Login-->
+        <scene sceneID="kUQ-pu-vfw">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Login" id="XtF-2x-JgY" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pmg-4e-fs0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-175" y="672"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="eQu-zi-f7e">
